# unicab-report-automotive

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml
Docs/: UNICAB_Proposta_Infrastruttura.docx
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
frontend/templates/: anteprime.html  base.html  dashboard.html  login.html  report_viewer.html  scraping_test.html  sources.html  timesheet.html
nginx/: nginx.conf
pm/: BACKLOG.md  DONE.md  README.md  ROADMAP.md  SPRINT.md
pm/ops/: BACKUP-RESTORE.md  COSTS.md  CREDENTIALS.md  DEPLOY.md  INCIDENTS.md
pm/pm-agent/: FEEDBACK.md  HANDOFF.md  ROLE.md  ROUTINES.md  handoff-2026-05-10-b-rotate-credentials.md  handoff-2026-05-12-a-l3-ground-truth.md  handoff-2026-05-12-b-test-solo-youtube.md  handoff-2026-05-12-c-output-presentabile-paolo.md  handoff-2026-05-12-d-scheda-prestazioni-l1.md  handoff-2026-05-14-a-anomalia-l2-vs-l2yt-prompt.md
pm/projects/: 00-stato-progetto.md  stakeholder.md  (+2 more)
scrapers/: Dockerfile  pyproject.toml
scrapers/src/: api.py  auto_brands.py  base.py  comment_parser.py  content_cleaner.py  facebook_ads.py  firecrawl_client.py  forums.py  google_ads.py  motore.py  perplexity_client.py  reddit.py  reddit_client.py  relevance.py  test_scrape.py  youtube.py  youtube_client.py
scripts/: add_activities_2026_05_12.sql  add_activities_2026_05_13.sql  add_activities_2026_05_14.sql  backup-prod.sh  deploy.sh  download-backup.ps1  export_n8n_workflows.sh  init_db.py  restore-prod.sh  server_setup.sh  setup_ssl.sh
(+43 files in other folders)
